@@ -1,3 +1,8 @@
+2006-11-30  Carlos Garnacho  <carlosg@gnome.org>
+
+	* dispatcher/dispatcher.c (daemonize): Oops, create the pid file if it
+	doesn't exist, also close unneeded file descriptors.
+
 2006-11-27  Carlos Garnacho  <carlosg@gnome.org>
 
 	Merge c-dispatcher branch, adds a lightweight dispatcher which raises
